rectify comments section

--- a/TPs/Project/median_dask.ipynb
+++ b/TPs/Project/median_dask.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "source": [
-    "To apply our median filter, we can either choose to not treat the borders of our image, or just add a padding (reflective or constant one) around the image to be able to filter the original borders as well. For this lab we're going with the first option by just ignoring the outer borders of our image and only work on the inner matrix.\n",
+    "To apply our median filter, we can either choose to not treat the borders of our image, or just add a padding (reflective or constant one) around the image to be able to filter the original borders as well. For this lab we're going with the second option by adding a 1-level padding around the original chunks by reflecting the outer borders on the inner matrix.\n",
     "\n",
     "Now we know that the median filter we want to apply needs a visibility of the neighboring of each of the cells it's working on. This kind of communication would throttle down the parallelization process of the whole filtering pipeline. To transform this into an embarassingly parallel problem, we chose to implement the **Ghost Cells** approach by picking the boundaries of each of our partition into account for each parallel filtering operation.\n",
     "\n",
