--- a/TPs/Project/Project/D_Dask_ML_Iris.ipynb
+++ b/TPs/Project/Project/D_Dask_ML_Iris.ipynb
@@ -398,6 +398,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1545911",
+   "metadata": {},
+   "source": [
+    "----------\n",
+    "Joblib reference:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ae1d005d",
@@ -408,6 +417,14 @@
     "\n",
     "#with joblib.parallel_backend('dask'):\n",
     "#    grid_search.fit(trainX, trainy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "382b7457",
+   "metadata": {},
+   "source": [
+    "----------"
    ]
   },
   {
